# teleSecretary

./: .env.example  .gitignore  Dockerfile  README.md  changelog.md  docker-compose.yml  pyproject.toml
src/tele_secretary/: __init__.py  __main__.py  config.py  logging_config.py  time_utils.py
src/tele_secretary/app/: health.py  help.py
src/tele_secretary/migrations/: 0001_foundation.sql
src/tele_secretary/persistence/: __init__.py  connection.py  migrations.py  refs.py
src/tele_secretary/scheduler/: __init__.py  runner.py
src/tele_secretary/telegram/: bot.py  responses.py
tests/: test_config.py  test_health_refs.py  test_migrations.py  test_telegram_responses.py  test_time_utils.py
